--- a/libs/components/src/lib/components/input/input-date-range/input-layout-date-range.component.html
+++ b/libs/components/src/lib/components/input/input-date-range/input-layout-date-range.component.html
@@ -5,7 +5,7 @@
   [closeByEsc]="true"
   [closeOnOutsideClick]="closeOnOutsideClick"
   [isOpen]="open && canOpen"
-  [prizmDropdownHost]="layoutComponent.el.nativeElement"
+  [prizmDropdownHost]="layoutComponent?.el?.nativeElement"
   (isOpenChange)="onOpenChange($event)"
   prizmDropdownHostWidth="auto"
 >
