--- a/libs/components/src/lib/components/input/input-date-relative/input-layout-date-relative.component.html
+++ b/libs/components/src/lib/components/input/input-date-relative/input-layout-date-relative.component.html
@@ -4,7 +4,7 @@
   [content]="dropdown"
   [isOpen]="isOpen && canOpen"
   [closeByEsc]="true"
-  [prizmDropdownHost]="layoutComponent.el.nativeElement"
+  [prizmDropdownHost]="layoutComponent?.el?.nativeElement"
   [prizmDropdownHostWidth]="'100%'"
   (isOpenChange)="onOpenChange($event)"
 >
