--- a/libs/components/src/lib/components/input/input-date-time-range/input-layout-date-time-range.component.html
+++ b/libs/components/src/lib/components/input/input-date-time-range/input-layout-date-time-range.component.html
@@ -6,7 +6,7 @@
   [closeOnOutsideClick]="closeOnOutsideClick"
   [prizmDropdownHostWidth]="'auto'"
   [isOpen]="canOpen && !disabled && open"
-  [prizmDropdownHost]="layoutComponent.el.nativeElement"
+  [prizmDropdownHost]="layoutComponent?.el?.nativeElement"
   (isOpenChange)="onOpenChange($event)"
   prizmDropdownHostWidth="auto"
 >
