--- a/libs/components/src/lib/components/dropdowns/select/input-select.component.html
+++ b/libs/components/src/lib/components/dropdowns/select/input-select.component.html
@@ -4,7 +4,7 @@
     *prizmLet="items && value | prizmCallFunc : getFullObjectOfCurrent : itemList as val"
     [content]="dropdown"
     [isOpen]="$any(opened$ | async)"
-    [prizmDropdownHost]="layoutComponent.el.nativeElement"
+    [prizmDropdownHost]="layoutComponent?.el?.nativeElement"
     [prizmDropdownHostWidth]="dropdownWidth"
     [prizmDropdownMinHeight]="minDropdownHeight"
     [prizmDropdownMaxHeight]="maxDropdownHeight"
@@ -23,9 +23,7 @@
           }
         "
       >
-        <ng-container
-          *prizmLet="val | prizmCallFunc : stringify : $any(nullContent) | prizmToObservable | async as text"
-        >
+        <ng-container *prizmLet="val | prizmCallFunc : stringifyForInner : $any(nullContent) | async as text">
           <input
             class="input-search"
             #focusableElementRef
