--- a/libs/components/src/lib/components/input/input-month-range/input-layout-month-range.component.html
+++ b/libs/components/src/lib/components/input/input-month-range/input-layout-month-range.component.html
@@ -4,7 +4,7 @@
   [content]="dropdown"
   [closeByEsc]="true"
   [isOpen]="open && interactive"
-  [prizmDropdownHost]="layoutComponent.el.nativeElement"
+  [prizmDropdownHost]="layoutComponent?.el?.nativeElement"
   (isOpenChange)="onOpenChange($event)"
   prizmDropdownHostWidth="auto"
 >
