feat: column setting dev

--- a/apps/doc/src/app/components/table/table-example.component.html
+++ b/apps/doc/src/app/components/table/table-example.component.html
@@ -101,6 +101,14 @@
     <prizm-doc-example id="column-settings" [content]="exampleColumnSettingsTable" heading="Column settings">
       <prizm-table-column-settings-example></prizm-table-column-settings-example>
     </prizm-doc-example>
+
+    <prizm-doc-example
+      id="custom-column-settings"
+      [content]="exampleColumnSettingsTable"
+      heading="Column settings with custom"
+    >
+      <prizm-table-column-settings-custom-example></prizm-table-column-settings-custom-example>
+    </prizm-doc-example>
   </ng-template>
 
   <ng-template prizmDocPageTab prizmDocHost>
