--- a/apps/doc/src/app/components/input/input-date-multi/examples/four/input-date-multi-four-example.component.html
+++ b/apps/doc/src/app/components/input/input-date-multi/examples/four/input-date-multi-four-example.component.html
@@ -1,7 +1,7 @@
 <prizm-input-date-multi [items]="items"> </prizm-input-date-multi>
 
 <ng-template #dateTime let-injector="injector">
-  <prizm-input-layout label="Абсолютное дата и время">
+  <prizm-input-layout label="Абсолютная дата и время">
     <prizm-input-layout-date-time
       [formControl]="dateTimeControl"
       [extraButtonInjector]="injector"
