--- a/apps/doc/src/app/components/input/input-select/input-select.component.less
+++ b/apps/doc/src/app/components/input/input-select/input-select.component.less
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
+  width: max-content;
 }
 
 ::ng-deep .extraDropdownClass {
