fix(components/input-multi-select): re render fix #1048

--- a/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.html
+++ b/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.html
@@ -47,7 +47,7 @@
         <div
           class="item"
           #parent
-          *ngFor="let item of $.filteredItems; let idx = index"
+          *ngFor="let item of $.filteredItems; let idx = index; trackBy: trackBy"
           [class.selected]="item.checked"
           [class.most-relevant]="searchable && searchInputControl.value && idx === 0"
         >
