fix(components/input-select): update value

--- a/libs/components/src/lib/components/dropdowns/select/input-select.component.html
+++ b/libs/components/src/lib/components/dropdowns/select/input-select.component.html
@@ -29,6 +29,7 @@
             #focusableElementRef
             [placeholder]="placeholder"
             [disabled]="disabled"
+            [title]="val"
             [readonly]="true"
             [prizmHintDirection]="prizmHintDirection"
             [prizmHintCanShow]="prizmHintCanShow"
