--- a/apps/doc/src/app/components/input/input-select/input-select.component.html
+++ b/apps/doc/src/app/components/input/input-select/input-select.component.html
@@ -239,7 +239,7 @@
       <ng-template #valueTemp let-value let-nullContent="nullContent">
         <div class="item" *ngIf="value; else empty">
           <prizm-icon iconClass="account-done"></prizm-icon>
-          <span>{{ value }}</span>
+          <span class="text-short">{{ value }}</span>
         </div>
         <ng-template #empty>
           {{ nullContent }}
