--- a/apps/doc/src/app/components/input/input-select/input-select.component.less
+++ b/apps/doc/src/app/components/input/input-select/input-select.component.less
@@ -12,3 +12,11 @@
   --prizm-data-list-header-text: white;
   --prizm-select-item-background: green;
 }
+
+.text-short {
+  max-width: 230px;
+  width: 230px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
