--- a/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.html
+++ b/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.html
@@ -17,7 +17,7 @@
     [style.visibility]="!layoutComponent?.outer && value?.length ? 'hidden' : ''"
     [disabled]="disabled"
     [readonly]="true"
-    [tabIndex]="1"
+    [tabIndex]="!disabled ? 1 : -1"
     [placeholder]="placeholder"
     [ngModelOptions]="{ standalone: true }"
     [ngModel]="($any(value) | prizmCallFunc : stringify) ?? ''"
