--- a/apps/doc/src/app/about-prizm/contacts/contacts.component.html
+++ b/apps/doc/src/app/about-prizm/contacts/contacts.component.html
@@ -109,7 +109,7 @@
       <strong>Контакты</strong>
       <ol>
         <li>name&#64;name.com</li>
-        <li>&#64;elegram</li>
+        <li>&#64;Telegram</li>
       </ol>
     </li>
     <li>
