feat: documentation colors update #1195

--- a/apps/doc/src/app/components/breadcrumbs/examples/breadcrumbs-projection-basic/breadcrumbs-example-projection.component.less
+++ b/apps/doc/src/app/components/breadcrumbs/examples/breadcrumbs-projection-basic/breadcrumbs-example-projection.component.less
@@ -2,7 +2,7 @@ a {
   font-weight: 400;
   font-size: 12px;
   line-height: 16px;
-  color: var(--prizm-text-subscript);
+  color: var(--prizm-v3-text-icon-tertiary);
   text-decoration: none;
 
   &:hover {
