--- a/apps/doc/src/app/components/dropdowns/dropdown-host/examples/select-panel-example/select-panel-example.component.less
+++ b/apps/doc/src/app/components/dropdowns/dropdown-host/examples/select-panel-example/select-panel-example.component.less
@@ -11,7 +11,7 @@
     display: flex;
   }
   &__label {
-    color: var(--prizm-text-contrast);
+    color: var(--prizm-v3-text-icon-primary);
     font-size: 14px;
     font-weight: 700;
   }
@@ -60,7 +60,7 @@
     background: var(--prizm-grey-g11-g3);
     font-size: 13px;
     line-height: 20px;
-    color: var(--prizm-text-contrast);
+    color: var(--prizm-v3-text-icon-primary);
     padding: 0 8px;
     border-radius: 2px;
   }
