--- a/apps/doc/src/app/components/navigation/examples/navigation-basic-example/navigation-basic-example.component.less
+++ b/apps/doc/src/app/components/navigation/examples/navigation-basic-example/navigation-basic-example.component.less
@@ -35,7 +35,7 @@
           background: var(--prizm-lite-b130-20);
 
           .project__menu {
-            color: var(--prizm-text-contrast);
+            color: var(--prizm-v3-text-icon-primary);
           }
         }
       }
@@ -76,7 +76,7 @@
           font-size: 14px;
           line-height: 20px;
 
-          color: var(--prizm-text-contrast);
+          color: var(--prizm-v3-text-icon-primary);
         }
 
         &__role {
@@ -162,14 +162,14 @@
           &__main {
             font-weight: 600;
 
-            color: var(--prizm-text-contrast);
+            color: var(--prizm-v3-text-icon-primary);
             text-align: center;
           }
 
           &__sub {
             font-weight: 400;
 
-            color: var(--prizm-text-subscript);
+            color: var(--prizm-v3-text-icon-tertiary);
           }
         }
       }
