--- a/apps/doc/src/app/components/spinner/examples/base/spinner-base-example.component.html
+++ b/apps/doc/src/app/components/spinner/examples/base/spinner-base-example.component.html
@@ -1,3 +1,3 @@
-<div style="position: relative; width: 150px; color: var(--prizm-text-contrast)">
+<div style="position: relative; width: 150px; color: var(--prizm-v3-text-icon-primary)">
   <prizm-spinner size="l"> </prizm-spinner>
 </div>
