--- a/apps/doc/src/app/components/zoom-control/examples/zoom-control-example-basic/zoom-control-example-basic.component.less
+++ b/apps/doc/src/app/components/zoom-control/examples/zoom-control-example-basic/zoom-control-example-basic.component.less
@@ -84,7 +84,7 @@
         font-size: 14px;
         line-height: 16px;
 
-        color: var(--prizm-text-contrast);
+        color: var(--prizm-v3-text-icon-primary);
 
         transition: 400ms;
 
@@ -139,7 +139,7 @@
       font-size: 14px;
       line-height: 16px;
 
-      color: var(--prizm-text-contrast);
+      color: var(--prizm-v3-text-icon-primary);
 
       overflow: hidden;
       cursor: pointer;
