--- a/apps/doc/src/app/components/side-menu/examples/side-menu-example-basic/side-menu-example-basic.component.less
+++ b/apps/doc/src/app/components/side-menu/examples/side-menu-example-basic/side-menu-example-basic.component.less
@@ -50,7 +50,7 @@
         border: 1px solid var(--prizm-border-widget);
         border-radius: 2px;
 
-        filter: drop-shadow(0 2px 4px var(--prizm-shadow));
+        filter: drop-shadow(0 2px 4px var(--prizm-v3-shadow-color));
 
         overflow: hidden;
 
@@ -62,7 +62,7 @@
             display: flex;
             align-items: center;
 
-            color: var(--prizm-text-contrast);
+            color: var(--prizm-v3-text-icon-primary);
             border: 1px solid transparent;
 
             overflow: hidden;
@@ -129,14 +129,14 @@
             &__main {
               font-weight: 600;
 
-              color: var(--prizm-text-contrast);
+              color: var(--prizm-v3-text-icon-primary);
               text-align: center;
             }
 
             &__sub {
               font-weight: 400;
 
-              color: var(--prizm-text-subscript);
+              color: var(--prizm-v3-text-icon-tertiary);
             }
           }
         }
