--- a/apps/doc/src/styles.less
+++ b/apps/doc/src/styles.less
@@ -39,12 +39,12 @@ prizm-data-list.is-full .t-empty {
 }
 
 .prizm-doc-content {
-  --tui-base-01: var(--prizm-demo);
+  --tui-base-01: var(--prizm-v3-background-fill-primary);
   --tui-radius-m: 2px;
   --tui-base-03: var(--prizm-border-widget);
   --tui-text-01: var(--prizm-text-main);
 
-  background-color: var(--prizm-demo);
+  background-color: var(--prizm-v3-background-fill-primary);
   border-style: var(--prizm-border-widget);
   color: var(--prizm-text-main);
 
@@ -54,7 +54,7 @@ prizm-data-list.is-full .t-empty {
 }
 
 .t-highlight {
-  color: var(--prizm-text-subscript);
+  color: var(--prizm-v3-text-icon-tertiary);
 }
 
 prizm-doc-demo.remove-sticky {
