feat: update documentation colors #1195

--- a/apps/doc/src/app/about-prizm/changelog/changelog.component.less
+++ b/apps/doc/src/app/about-prizm/changelog/changelog.component.less
@@ -11,11 +11,11 @@ markdown {
 
   & a {
     text-decoration: none;
-    color: var(--prizm-link);
+    color: var(--prizm-v3-text-icon-link);
 
     &:hover,
     &:active {
-      color: var(--prizm-link-hover);
+      color: var(--prizm-v3-text-icon-link-hover);
     }
   }
 
@@ -43,7 +43,7 @@ markdown {
 
   & h3[id^='breaking'] {
     margin-left: 1.25rem;
-    color: var(--prizm-index-danger);
+    color: var(--prizm-v3-status-alarm-primary-default);
   }
 
   & code {
@@ -82,7 +82,7 @@ markdown {
       width: 0.5rem;
       height: 0.5rem;
       border-radius: 100%;
-      background-color: var(--prizm-index-plan);
+      background-color: var(--prizm-v3-status-info-primary-default);
     }
   }
 }
