--- a/apps/doc/src/app/components/breadcrumbs/examples/breadcrumbs-projection-basic/breadcrumbs-example-projection.component.less
+++ b/apps/doc/src/app/components/breadcrumbs/examples/breadcrumbs-projection-basic/breadcrumbs-example-projection.component.less
@@ -6,6 +6,6 @@ a {
   text-decoration: none;
 
   &:hover {
-    color: var(--prizm-index-plan);
+    color: var(--prizm-v3-text-icon-link-hover);
   }
 }
