--- a/apps/doc/src/app/components/dropdowns/dropdown-host/examples/date-list-edit/date-list-edit.component.less
+++ b/apps/doc/src/app/components/dropdowns/dropdown-host/examples/date-list-edit/date-list-edit.component.less
@@ -56,7 +56,7 @@
 }
 
 .trash-icon {
-  color: var(--prizm-index-danger);
+  color: var(--prizm-v3-status-alarm-primary-default);
 }
 
 prizm-icon {
@@ -64,7 +64,7 @@ prizm-icon {
 }
 
 .edit-icon {
-  color: var(--prizm-grey-g8-g6);
+  color: var(--prizm-v3-text-icon-tertiary);
 }
 
 .edit-block {
