--- a/apps/doc/src/app/components/icons/old/icon.component.less
+++ b/apps/doc/src/app/components/icons/old/icon.component.less
@@ -25,7 +25,7 @@ h4 {
   border-radius: 4px;
 
   &:hover {
-    background-color: var(--prizm-bg-dashboard-forms);
+    background-color: var(--prizm-v3-background-fill-secondary);
   }
 }
 
@@ -43,5 +43,5 @@ h4 {
 
 .title,
 .name {
-  color: var(--prizm-text-main);
+  color: var(--prizm-v3-text-icon-secondary);
 }
