--- a/apps/doc/src/app/components/icons/svg/icon.component.less
+++ b/apps/doc/src/app/components/icons/svg/icon.component.less
@@ -10,7 +10,7 @@ h4 {
 .icons {
   display: flex;
   flex-wrap: wrap;
-  color: var(--prizm-index-plan);
+  color: var(--prizm-v3-status-info-primary-default);
 }
 
 .icon-def {
@@ -26,7 +26,7 @@ h4 {
   cursor: pointer;
 
   &:hover {
-    background-color: var(--prizm-bg-dashboard-forms);
+    background-color: var(--prizm-v3-background-fill-secondary);
   }
 }
 
@@ -48,5 +48,5 @@ h4 {
 
 .title,
 .name {
-  color: var(--prizm-text-main);
+  color: var(--prizm-v3-text-icon-secondary);
 }
