--- a/apps/doc/src/app/components/panel/examples/panel-example-basic/panel-example-basic.component.less
+++ b/apps/doc/src/app/components/panel/examples/panel-example-basic/panel-example-basic.component.less
@@ -6,13 +6,13 @@
     flex-direction: column;
 
     border-radius: 2px;
-    border: 1px solid var(--prizm-border-widget);
+    border: 1px solid var(--prizm-v3-background-stroke);
 
     .content {
       padding: 16px;
-      background: var(--prizm-bg-body);
+      background: var(--prizm-v3-background-fill-primary);
 
-      color: var(--prizm-text-main);
+      color: var(--prizm-v3-text-icon-secondary);
 
       flex: 1;
     }
