--- a/apps/doc/src/app/components/panel/examples/panel-example-with-breadcrumbs/panel-example-with-breadcrumbs.component.less
+++ b/apps/doc/src/app/components/panel/examples/panel-example-with-breadcrumbs/panel-example-with-breadcrumbs.component.less
@@ -6,7 +6,7 @@
     flex-direction: column;
 
     border-radius: 2px;
-    border: 1px solid var(--prizm-border-widget);
+    border: 1px solid var(--prizm-v3-background-stroke);
 
     .breadcrumbs {
       padding: 0 14px;
@@ -18,7 +18,7 @@
     .content {
       padding: 16px;
 
-      background: var(--prizm-bg-body);
+      background: var(--prizm-v3-background-fill-primary);
 
       flex: 1;
     }
