--- a/apps/doc/src/app/components/sticky/examples/base/sticky-base-example.component.less
+++ b/apps/doc/src/app/components/sticky/examples/base/sticky-base-example.component.less
@@ -5,7 +5,7 @@
   .row {
     display: grid;
     grid-template-columns: repeat(9, 1fr);
-    background-color: var(--prizm-bg-body);
+    background-color: var(--prizm-v3-background-fill-primary);
 
     .col {
       height: 30px;
