--- a/apps/doc/src/app/components/widget/widget-example.component.less
+++ b/apps/doc/src/app/components/widget/widget-example.component.less
@@ -1,5 +1,5 @@
 prizm-widget {
-  color: var(--prizm-text-main);
+  color: var(--prizm-v3-text-icon-secondary);
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
