--- a/apps/doc/src/styles.less
+++ b/apps/doc/src/styles.less
@@ -41,12 +41,12 @@ prizm-data-list.is-full .t-empty {
 .prizm-doc-content {
   --tui-base-01: var(--prizm-v3-background-fill-primary);
   --tui-radius-m: 2px;
-  --tui-base-03: var(--prizm-border-widget);
-  --tui-text-01: var(--prizm-text-main);
+  --tui-base-03: var(--prizm-v3-background-stroke);
+  --tui-text-01: var(--prizm-v3-text-icon-secondary);
 
   background-color: var(--prizm-v3-background-fill-primary);
-  border-style: var(--prizm-border-widget);
-  color: var(--prizm-text-main);
+  border-style: var(--prizm-v3-background-stroke);
+  color: var(--prizm-v3-text-icon-secondary);
 
   prizm-tag {
     display: none;
