--- a/libs/doc/base/src/lib/components/documentation/documentation.style.less
+++ b/libs/doc/base/src/lib/components/documentation/documentation.style.less
@@ -110,7 +110,7 @@
 }
 
 .t-row {
-  border-bottom: 1px solid var(--prizm-border-widget);
+  border-bottom: 1px solid var(--prizm-v3-background-stroke);
 }
 .t-name {
   position: relative;
