--- a/apps/doc/src/app/components/accordion/examples/accordion-with-instruments-example/accordion-with-instruments-example.component.less
+++ b/apps/doc/src/app/components/accordion/examples/accordion-with-instruments-example/accordion-with-instruments-example.component.less
@@ -1,5 +1,5 @@
 :host {
   font-size: 14px;
   line-height: 16px;
-  color: var(--prizm-text-main);
+  color: var(--prizm-v3-text-icon-secondary);
 }
