--- a/apps/doc/src/app/components/dropdowns/dropdown-host/examples/select-panel-example/select-panel-example.component.less
+++ b/apps/doc/src/app/components/dropdowns/dropdown-host/examples/select-panel-example/select-panel-example.component.less
@@ -16,11 +16,11 @@
     font-weight: 700;
   }
 
-  border-bottom: 1px solid var(--prizm-border-widget);
+  border-bottom: 1px solid var(--prizm-v3-background-stroke);
 }
 
 .footer {
-  border-top: 1px solid var(--prizm-data-list-border, var(--prizm-border-widget));
+  border-top: 1px solid var(--prizm-data-list-border, var(--prizm-v3-background-stroke));
   padding: var(--prizm-data-list-padding, 16px);
   display: flex;
   justify-content: center;
@@ -57,7 +57,6 @@
   }
 
   &__title {
-    background: var(--prizm-grey-g11-g3);
     font-size: 13px;
     line-height: 20px;
     color: var(--prizm-v3-text-icon-primary);
