--- a/apps/doc/src/app/components/icons/flags/flags.component.less
+++ b/apps/doc/src/app/components/icons/flags/flags.component.less
@@ -23,7 +23,7 @@ h4 {
   cursor: pointer;
 
   &:hover {
-    background-color: var(--prizm-bg-dashboard-forms);
+    background-color: var(--prizm-v3-background-fill-secondary);
   }
 }
 
@@ -44,5 +44,5 @@ h4 {
 
 .title,
 .name {
-  color: var(--prizm-text-main);
+  color: var(--prizm-v3-text-icon-secondary);
 }
