--- a/apps/doc/src/app/components/panel/examples/panel-example-with-instruments-hard/panel-example-with-instruments-hard.component.less
+++ b/apps/doc/src/app/components/panel/examples/panel-example-with-instruments-hard/panel-example-with-instruments-hard.component.less
@@ -6,7 +6,7 @@
     flex-direction: column;
 
     border-radius: 2px;
-    border: 1px solid var(--prizm-border-widget);
+    border: 1px solid var(--prizm-v3-background-stroke);
 
     .tabs {
       display: flex;
@@ -30,7 +30,7 @@
         display: flex;
         gap: 10px;
 
-        border-right: 1px solid var(--prizm-grey-g10-g4);
+        border-right: 1px solid var(--prizm-v3-background-stroke);
 
         &:last-child {
           border: none;
@@ -40,9 +40,9 @@
 
     .content {
       padding: 16px;
-      background: var(--prizm-bg-body);
+      background: var(--prizm-v3-background-fill-primary);
 
-      color: var(--prizm-text-main);
+      color: var(--prizm-v3-text-icon-secondary);
 
       flex: 1;
     }
