--- a/apps/doc/src/app/components/shadow/shadow.component.less
+++ b/apps/doc/src/app/components/shadow/shadow.component.less
@@ -1,11 +1,11 @@
 .shadow-container {
   width: 200px;
   height: 200px;
-  background: var(--prizm-bg-body);
+  background: var(--prizm-v3-background-fill-primary);
   border-radius: 0.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 16px;
-  color: var(--prizm-text-main);
+  color: var(--prizm-v3-text-icon-secondary);
 }
