--- a/apps/doc/src/app/components/table/examples/table-status-example/table-status-example.component.less
+++ b/apps/doc/src/app/components/table/examples/table-status-example/table-status-example.component.less
@@ -4,7 +4,7 @@
   }
 
   .summary {
-    background: var(--prizm-grey-g12-g2);
+    background: var(--prizm-v3-table-fill-row-zebra_default);
 
     td:first-child {
       font-size: 12px;
