--- a/apps/doc/src/app/components/tabs/examples/tabs-example-in-panel/tabs-example-in-panel.component.less
+++ b/apps/doc/src/app/components/tabs/examples/tabs-example-in-panel/tabs-example-in-panel.component.less
@@ -6,7 +6,7 @@
     flex-direction: column;
 
     border-radius: 2px;
-    border: 1px solid var(--prizm-border-widget);
+    border: 1px solid var(--prizm-v3-background-stroke);
 
     .tabs {
       display: flex;
@@ -15,9 +15,9 @@
 
     .content {
       padding: 16px;
-      background: var(--prizm-bg-body);
+      background: var(--prizm-v3-background-fill-primary);
 
-      color: var(--prizm-text-main);
+      color: var(--prizm-v3-text-icon-secondary);
 
       flex: 1;
     }
