--- a/apps/doc/src/app/how-to-work/internationalization/internationalization.component.less
+++ b/apps/doc/src/app/how-to-work/internationalization/internationalization.component.less
@@ -7,9 +7,9 @@ prizm-doc-code {
 }
 
 .required {
-  color: var(--prizm-index-danger);
+  color: var(--prizm-v3-status-alarm-primary-default);
 }
 
 .optional {
-  color: var(--prizm-index-warning);
+  color: var(--prizm-v3-status-warning-primary-default);
 }
