--- a/apps/doc/src/app/components/table/examples/table-data-source-example/table-data-source-example.component.html
+++ b/apps/doc/src/app/components/table/examples/table-data-source-example/table-data-source-example.component.html
@@ -11,7 +11,7 @@
         <th *prizmHead="'count'" [sorter]="sorter" rowspan="2" prizmTh>Количество</th>
       </tr>
       <tr prizmThGroup>
-        <th class="extra-border search-cell" [resizable]="true" prizmTh>
+        <th class="extra-border" [resizable]="true" prizmTh>
           <input #input (enter)="search($event, 'name')" prizmInput placeholder="Поиск" />
           <button
             [interactive]="true"
