feat: documnetation v3 colors #1195

--- a/libs/doc/base/src/lib/components/navigation/navigation.component.less
+++ b/libs/doc/base/src/lib/components/navigation/navigation.component.less
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  background: var(--prizm-doc-navigation-background, var(--prizm-palette-g13));
+  background: var(--prizm-doc-navigation-background, var(--prizm-v3-palette-gray-h50-dark));
 }
 
 .t-input {
