feat(components/placeholder): placeholder

--- a/libs/components/src/lib/components/input/input-text/input-textarea.component.less
+++ b/libs/components/src/lib/components/input/input-text/input-textarea.component.less
@@ -3,6 +3,14 @@
   resize: none;
   min-height: 42px;
 
+  :host.empty {
+    padding-top: 8px;
+  }
+
+  &::placeholder {
+    opacity: 1;
+  }
+
   &.add-base-resize {
     resize: both;
   }
