feat(components/dialog): added ability to control scrollbar visibility #780

--- a/apps/doc/src/app/components/dialogs/confirm-dialog/confirm.component.html
+++ b/apps/doc/src/app/components/dialogs/confirm-dialog/confirm.component.html
@@ -133,7 +133,15 @@
       >
         Width
       </ng-template>
-
+      <ng-template
+        [(documentationPropertyValue)]="visibility"
+        [documentationPropertyValues]="visibilityVariants"
+        documentationPropertyName="scrollbarVisibility"
+        documentationPropertyType="PrizmScrollbarVisibility"
+        documentationPropertyMode="input"
+      >
+        Scrollbar Visibility
+      </ng-template>
       <ng-template
         [(documentationPropertyValue)]="confirmButton"
         documentationPropertyName="confirmButton"
