--- a/apps/doc/src/app/components/scrollbar/scrollbar.component.html
+++ b/apps/doc/src/app/components/scrollbar/scrollbar.component.html
@@ -88,7 +88,7 @@
         documentationPropertyType="PrizmScrollbarVisibility"
         documentationPropertyMode="input"
       >
-        Size
+        Visibility
       </ng-template>
     </prizm-doc-documentation>
   </ng-template>
