--- a/apps/doc/src/app/components/dialogs/dialog/dialog-example.component.html
+++ b/apps/doc/src/app/components/dialogs/dialog/dialog-example.component.html
@@ -70,6 +70,16 @@
       </ng-template>
 
       <ng-template
+        [(documentationPropertyValue)]="visibility"
+        [documentationPropertyValues]="visibilityVariants"
+        documentationPropertyName="scrollbarVisibility"
+        documentationPropertyType="PrizmScrollbarVisibility"
+        documentationPropertyMode="input"
+      >
+        Scrollbar Visibility
+      </ng-template>
+
+      <ng-template
         [(documentationPropertyValue)]="backdrop"
         documentationPropertyName="backdrop"
         documentationPropertyType="boolean"
