--- a/apps/doc/src/app/components/input/input-number/input-number-example.component.html
+++ b/apps/doc/src/app/components/input/input-number/input-number-example.component.html
@@ -31,11 +31,13 @@
         <div>
           <h4>Number</h4>
           <prizm-input-layout
-            [label]="label"
             [size]="size"
+            [label]="label"
             [outer]="outer"
-            [status]="status"
+            [border]="border"
             [position]="inputPosition"
+            [status]="status"
+            [forceClear]="forceClear"
           >
             <input
               #prizmInputNumber
@@ -70,11 +72,16 @@
         <div>
           <h4>Counter</h4>
           <prizm-input-layout
-            [label]="label"
+            #inputElement
+            [prizmDocHostElement]="inputElement"
+            [prizmDocHostElementKey]="layoutKey"
             [size]="size"
-            [status]="status"
+            [label]="label"
             [outer]="outer"
-            [position]="'center'"
+            [border]="border"
+            [position]="inputPosition"
+            [status]="status"
+            [forceClear]="forceClear"
           >
             <button
               [inputNumber]="inputCounter"
@@ -93,10 +100,10 @@
               [step]="step"
               [precision]="precision"
               [value]="value"
+              [placeholder]="placeholder"
               [disabled]="disabled"
               [prizmHintDirection]="prizmHintDirection"
               [prizmHintCanShow]="prizmHintCanShow"
-              [placeholder]="placeholder"
               [required]="required"
               prizmInputNumber
             />
@@ -142,33 +149,14 @@
       heading="PrizmInputNumberDirective"
       hostComponentKey="PrizmInputNumberDirective"
     >
-      <!--      <ng-template-->
-      <!--        [(documentationPropertyValue)]="required"-->
-      <!--        documentationPropertyName="required"-->
-      <!--        documentationPropertyType="boolean"-->
-      <!--        documentationPropertyMode="input"-->
-      <!--      >-->
-      <!--        Required-->
-      <!--      </ng-template>-->
-
-      <!--      <ng-template-->
-      <!--        [(documentationPropertyValue)]="disabled"-->
-      <!--        [documentationPropertyDeprecated]="true"-->
-      <!--        documentationPropertyName="disabled"-->
-      <!--        documentationPropertyType="boolean"-->
-      <!--        documentationPropertyMode="input"-->
-      <!--      >-->
-      <!--        Disabled Use form control disabled-->
-      <!--      </ng-template>-->
-
-      <!--      <ng-template-->
-      <!--        [(documentationPropertyValue)]="value"-->
-      <!--        documentationPropertyName="value"-->
-      <!--        documentationPropertyType="number"-->
-      <!--        documentationPropertyMode="input"-->
-      <!--      >-->
-      <!--        Value-->
-      <!--      </ng-template>-->
+      <ng-template
+        [(documentationPropertyValue)]="placeholder"
+        documentationPropertyName="placeholder"
+        documentationPropertyType="string"
+        documentationPropertyMode="input"
+      >
+        Placeholder
+      </ng-template>
 
       <ng-template
         [(documentationPropertyValue)]="min"
@@ -178,16 +166,6 @@
       >
         Minimum value
       </ng-template>
-
-      <!--      <ng-template-->
-      <!--        [(documentationPropertyValue)]="decimal"-->
-      <!--        [documentationPropertyValues]="decimalVariants"-->
-      <!--        documentationPropertyName="decimal"-->
-      <!--        documentationPropertyType="PrizmDecimal"-->
-      <!--        documentationPropertyMode="input"-->
-      <!--      >-->
-      <!--        Show/hide decimal-->
-      <!--      </ng-template>-->
 
       <ng-template
         [(documentationPropertyValue)]="precision"
@@ -216,14 +194,6 @@
         Step
       </ng-template>
 
-      <!--      <ng-template-->
-      <!--        documentationPropertyName="enter"-->
-      <!--        documentationPropertyType="any"-->
-      <!--        documentationPropertyMode="output"-->
-      <!--      >-->
-      <!--        Enter-->
-      <!--      </ng-template>-->
-
       <ng-template
         documentationPropertyName="onClear"
         documentationPropertyType="MouseEvent"
@@ -231,14 +201,6 @@
       >
         On Clear
       </ng-template>
-
-      <!--      <ng-template-->
-      <!--        documentationPropertyName="valueChanged"-->
-      <!--        documentationPropertyType="number"-->
-      <!--        documentationPropertyMode="output"-->
-      <!--      >-->
-      <!--        Value Changed-->
-      <!--      </ng-template>-->
     </prizm-doc-documentation>
 
     <prizm-doc-documentation
@@ -274,6 +236,88 @@
         documentationPropertyMode="input"
       >
         prizmInputNumberAuxiliaryControl
+      </ng-template>
+    </prizm-doc-documentation>
+
+    <prizm-doc-documentation [heading]="layoutKey" [hostComponentKey]="layoutKey">
+      <ng-template
+        [(documentationPropertyValue)]="forceClear"
+        [documentationPropertyValues]="forceClearVariants"
+        documentationPropertyName="forceClear"
+        documentationPropertyType="boolean | null"
+        documentationPropertyMode="input"
+      >
+        Show clear button
+      </ng-template>
+
+      <ng-template
+        documentationPropertyName="clearButton"
+        documentationPropertyType="PolymorphContent<PrizmInputLayoutClearButtonContext>"
+        documentationPropertyMode="input"
+      >
+        Clear Button (icon or template)
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="outer"
+        documentationPropertyName="outer"
+        documentationPropertyType="boolean"
+        documentationPropertyMode="input"
+      >
+        Outer
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="size"
+        [documentationPropertyValues]="sizeVariants"
+        documentationPropertyName="size"
+        documentationPropertyType="PrizmInputSize"
+        documentationPropertyMode="input"
+      >
+        Size
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="label"
+        documentationPropertyName="label"
+        documentationPropertyType="string"
+        documentationPropertyMode="input"
+      >
+        Label
+      </ng-template>
+      <ng-template
+        documentationPropertyName="clear"
+        documentationPropertyType="MouseEvent"
+        documentationPropertyMode="output"
+      >
+        Clear
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="border"
+        documentationPropertyName="border"
+        documentationPropertyType="boolean"
+        documentationPropertyMode="input"
+      >
+        Border
+      </ng-template>
+      <ng-template
+        [(documentationPropertyValue)]="status"
+        [documentationPropertyValues]="statuses"
+        documentationPropertyName="status"
+        documentationPropertyType="PrizmInputStatus"
+        documentationPropertyMode="input"
+      >
+        Status
+      </ng-template>
+      <ng-template
+        [(documentationPropertyValue)]="inputPosition"
+        [documentationPropertyValues]="inputPositionVariants"
+        documentationPropertyName="position"
+        documentationPropertyType="PrizmInputPosition"
+        documentationPropertyMode="input"
+      >
+        Position
       </ng-template>
     </prizm-doc-documentation>
   </ng-template>
