--- a/apps/doc/src/app/components/input/input-text/input.component.html
+++ b/apps/doc/src/app/components/input/input-text/input.component.html
@@ -183,6 +183,7 @@
         <input
           #prizmInputElement
           [prizmDocHostElement]="prizmInputElement"
+          [placeholder]="placeholder"
           [formControl]="control"
           [disabled]="disabled"
           [prizmHintDirection]="prizmHintDirection"
@@ -305,6 +306,15 @@
     </prizm-doc-documentation>
 
     <prizm-doc-documentation [control]="control" hostComponentKey="PrizmInput" heading="PrizmInput">
+      <ng-template
+        [(documentationPropertyValue)]="placeholder"
+        documentationPropertyName="placeholder"
+        documentationPropertyType="string"
+        documentationPropertyMode="input"
+      >
+        Placeholder
+      </ng-template>
+
       <ng-template
         [(documentationPropertyValue)]="disabled"
         documentationPropertyName="disabled"
